# laps

./: .gitignore  README.md  llrplaps.sh
lib/linux/: .directory  libQt53DCore.la  libQt53DCore.prl  libQt53DCore.so.5.7.0  libQt53DExtras.la  libQt53DExtras.prl  libQt53DExtras.so.5.7.0  libQt53DInput.la  libQt53DInput.prl  libQt53DInput.so.5.7.0  libQt53DLogic.la  libQt53DLogic.prl  libQt53DLogic.so.5.7.0  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuick.so.5.7.0  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickExtras.so.5.7.0  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickInput.so.5.7.0  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DQuickRender.so.5.7.0  libQt53DRender.la  libQt53DRender.prl  libQt53DRender.so.5.7.0  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bluetooth.so.5.7.0  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5CLucene.la  libQt5CLucene.prl  libQt5CLucene.so.5.7.0  libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Core.la  libQt5DBus.la  (+119 more)
src/: CMakeLists.txt  Makefile  cdbase.cpp  cdbase.h  cmembers.cpp  cmembers.h  cmembers.ui  cmessages.cpp  cmessages.h  cmessages.ui  cplot.cpp  cplot.h  cplotform.cpp  cplotform.h  cplotform.ui  cpreferences.cpp  cpreferences.h  cpreferences.ui  creader.cpp  creader.h  crider.cpp  crider.h  csessions.cpp  csessions.h  csessions.ui  csettings.cpp  csettings.h  csettings.ui  csmtp.cpp  csmtp.h  ctaginfo.cpp  ctaginfo.h  cusereditor.ui  cusers.cpp  cusers.h  cusers.ui  exceptions.cpp  exceptions.h  laps_fr_CA.ts  llrplaps.pro  (+12 more)
src/resources/: App.icns  resources.qrc
src/tests/: Makefile  test1.cpp
